--- a/index.html
+++ b/index.html
@@ -2,22 +2,13 @@
 <html>
   <head>
         <meta charset="UTF-8">
-        <title>Hello React</title>
-
-        <!--<script src="https://code.jquery.com/jquery-3.1.0.min.js" />-->
-        <!--<link rel="stylesheet" href="/css/react-bootstrap-table-all.min.css">-->
-
+        <title>Playlist</title>
+        <link rel="stylesheet" href="/css/react-bootstrap-table-all.min.css">
+        <link rel="stylesheet" href="/css/bootstrap.css">
       </head>
   <body>
-<!--    <div id="hello"></div>-->
-<!--    <div id="world"></div>-->
-    <div id="content">123</div>
-    <!--<script src="/scripts/libs/react-bootstrap-table.min.js" />-->
-    <!--<script>-->
-        <!--var ReactBsTable = window.BootstrapTable;-->
-    <!--<script/>-->
-    <!--<script type="text/babel" src="/scripts/tables-test.jsx"></script>-->
-
+    <div id="content">Please wait. Loading page...</div>
+    <script type="text/babel" src="/scripts/tables-test.jsx"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="bundle.js"></script>
   </body>
